--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(Wrapper)
 
 find_package(Boost REQUIRED)
 
-add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} boost::boost)
+add_executable(Boost_Wrapper boost_main.cpp)
+target_link_libraries(Boost_Wrapper boost::boost)
+
+add_executable(WinAPI_Wrapper winapi_main.cpp)
